# mysystemdown-api

./: .env.example  pyproject.toml
src/bots/: urls.py
src/bots/repositories/: bot_repository.py
src/bots/serializers/: bot_serializer.py
src/bots/services/: bot_service.py
src/bots/views/: bot_view.py
src/config/: exceptions.py  exceptions_handler.py  settings.py  urls.py
src/config/middlewares/: tenant_middleware.py
src/iam/: exceptions.py  urls.py
src/iam/authentication/: token_auth.py
src/iam/permissions/: bot_permissions.py  service_permissions.py  systems_permissions.py  user_permissions.py
src/iam/serializers/: login_serializer.py  logout_serializer.py  membership_serializer.py  password_serializer.py  token_serializer.py
src/iam/services/: auth_service.py
src/iam/views/: confirm_email_view.py  login_view.py  logout_view.py  reset_password_view.py
src/infra/email/: email.py
src/services/repositories/: service_repository.py
src/services/serializers/: service_serializer.py
src/services/services/: service_service.py
src/services/views/: service_view.py
src/systems/views/: bot_view.py  service_view.py
src/tenants/: exceptions.py  urls.py
src/tenants/repositories/: client_repository.py
src/tenants/serializers/: tenant_serializer.py
src/tenants/service/: tenant_service.py
src/tenants/views/: tenant_view.py
src/users/: models.py  urls.py
src/users/migrations/: 0002_user_password_change_at_user_previous_password.py
src/users/repositories/: user_repository.py
src/users/serializers/: user_serializer.py
tests/: conftest.py
(+9 files in other folders)
